// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Contrib] elements/<Subtitle /> should match snapshot 1`] = `
<div>
  <h2
    class="Subtitle-sc-17ig8qv-0 cPKaSn"
  />
</div>
`;

exports[`[Contrib] elements/<Subtitle /> should match snapshot with \`isFirst\` prop 1`] = `
<div>
  <h2
    class="Subtitle-sc-17ig8qv-0 cIGDXh"
  />
</div>
`;
